vbnc/vbnc/tests/Errors/32083-7.vb

Class A
    Friend Sub New()

    End Sub
End Class

Class B(Of T As New)
    Dim z As b(Of A)
End Class